--- a/src/pages/RecipeApp/RecipeAppNavbar.css
+++ b/src/pages/RecipeApp/RecipeAppNavbar.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 4vh;
+  height: 60px;
   border-bottom: 2px solid black;
   background-color: white;
 }
