--- a/src/pages/RecipeApp/RecipeHome.css
+++ b/src/pages/RecipeApp/RecipeHome.css
@@ -1,6 +1,6 @@
 .homepage {
   background-color: white;
-  height: 96vh;
+  height: calc(100vh - 60px);
 }
 .homepage .imgplacement {
   height: 450px;
